...
    android:clickable="true">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/LoginButton"
        android:clickable="true"
        android:enabled="true"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView"
        android:nestedScrollingEnabled="false" />

...
